@@ -1,0 +1,5 @@
+BEGIN {
+	n = "varname"
+	SYMTAB[n]
+	varname
+}
