@@ -2,6 +2,9 @@
 
 	* indirectbuiltin.awk, numrange.awk, numrange.ok: Changes
 	after code changes.
+	* Makefile.am (EXTRA_DIST): New tests, stupid1 and stupid2.
+	* stupid1.awk, stupid1.ok: New files.
+	* stupid2.awk, stupid2.ok: New files.
 
 2019-11-09         Alexey Pawlow        <alexey.pawlow@gmail.com>
 
@@ -10,30 +13,30 @@
 
 2019-11-03         Arnold D. Robbins     <arnold@skeeve.com>
 
-	* Makefile.am (EXTRA_DISTS): New test, fpat7.
+	* Makefile.am (EXTRA_DIST): New test, fpat7.
 	* fpat7.awk, fpat7.ok, fpat7.in: New files.
 
 2019-10-13         Arnold D. Robbins     <arnold@skeeve.com>
 
-	* Makefile.am (EXTRA_DISTS): New tests, typedregex5 and
+	* Makefile.am (EXTRA_DIST): New tests, typedregex5 and
 	typedregex6.
 	* typedregex5.awk, typedregex5.ok, typedregex6.in,
 	typedregex5.in, typedregex6.awk, typedregex6.ok: New files.
 
 2019-09-24         Jürgen Kahrs Google   <juergen.kahrs@googlemail.com>
 
-	* Makefile.am (EXTRA_DISTS): New test, mpfranswer42.
+	* Makefile.am (EXTRA_DIST): New test, mpfranswer42.
 	* mpfranswer42.awk, mpfranswer42.ok: New files.
 
 2019-07-23         Arnold D. Robbins     <arnold@skeeve.com>
 
-	* Makefile.am (EXTRA_DISTS): Fix typos in filenames.
+	* Makefile.am (EXTRA_DIST): Fix typos in filenames.
 
 2019-06-28         Michal Jaegermann     <michal.jnn@gmail.com>
 
 	Add backwards compatibility tests for inplace.
 
-	* Makefile.am (EXTRA_DISTS): New tests, inplace2bcomp, inplace2bcomp.
+	* Makefile.am (EXTRA_DIST): New tests, inplace2bcomp, inplace2bcomp.
 	* inplace2bcomp.1.ok, test/inplace2bcomp.1.orig.ok,
 	test/inplace2bcomp.2.ok, test/inplace2bcomp.2.orig.ok,
 	test/inplace2bcomp.ok, test/inplace3bcomp.1.ok,
